RESOLVED FIXED23598
wml/WMLTableElement.cpp has non-ASCII characters in comment and can't be compiled on CJK Windows
https://bugs.webkit.org/show_bug.cgi?id=23598
Summary wml/WMLTableElement.cpp has non-ASCII characters in comment and can't be comp...
Jungshik Shin
Reported 2009-01-28 12:58:03 PST
WebCore/wml/WMLTableElement.cpp has non-ASCII characters (0 enclosed by smart-quotes) in UTF-8 and leads to a compilation error (warning treated as an error) on CJK Windows (where 3-byte sequences for smart quotes cannot be interpreted as valid in the default system codepage). Either we have to replace them with ASCII double-quotes or add 'BOM' character represented in UTF-8 at the beginning of a file. I propose the former is better because on other platforms/compiler/build tools, 'BOM' in UTF-8 might be problematic.
Attachments
patch (1.43 KB, patch)
2009-01-28 13:14 PST, Jungshik Shin
ap: review+
Jungshik Shin
Comment 1 2009-01-28 13:14:18 PST
Created attachment 27119 [details] patch Applying this patch is a step forward, but there are other header files (in Quicktime SDK and in WebKitLibraries/win/include) with the same issue leading to a compilation error on CJK Windows. For Quicktime SDK, I filed a bug report at bugreport.apple.com a while ago.
Jungshik Shin
Comment 2 2009-01-28 13:17:28 PST
Other files in WebKitLibraries/win/include with the issue are CMTypes.h and CMApplication.h Perhaps, we have to add a note to the Windows build page about the issue (do not set the Windows system code page to one of CJK codepages to build webkit on Windows) until all of them are cleaned up.
Alexey Proskuryakov
Comment 3 2009-01-28 13:38:14 PST
Comment on attachment 27119 [details] patch r=me
Darin Fisher (:fishd, Google)
Comment 4 2009-01-29 16:45:40 PST
Note You need to log in before you can comment on or make changes to this bug.