2009-01-29  Jungshik Shin  <jshin@chromium.org>

Reviewed by Alexey Proskuryakov.

        http://bugs.webkit.org/show_bug.cgi?id=23598
        Replace smart-quotes in UTF-8 with ASCII double-quotes to avoid
        the compilation error on CJK Windows

        * wml/WMLTableElement.cpp:
        (WebCore::WMLTableElement::parseMappedAttribute):



Canonical link: https://commits.webkit.org/32570@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40387 268f45cc-cd09-0410-ab3c-d52691b4dbfc